[metadata]
name = pycx
version = 1.0.0
author = Rangga Fajar Oktariansyah
author_email = fajarrkim@gmail.com
description = Compiler Python version 3 source file to binary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FajarKim/pycx
license = AGPL-3.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://github.com/FajarKim/pycx#readme
    Donate = https://buymeacoffee.com/fajarkim
    Source Code = https://github.com/FajarKim/pycx
    Bug Tracker = https://github.com/FajarKim/pycx/issues

[options]
python_requires = >=3.8
packages = find:
install_requires =
    Cython>=0.29.34

[options.entry_points]
console_scripts =
    pycx = pycx.cli:compile
